Resolve symlink for file listener

Summary:
Always resolve symlink so that
Baloo indexer works

BUG: 410670
CCBUG: 407918

Test Plan:
remove actual music folder from search path
delete old database
create a symlink to your music folder
add symlink as search path
music is found with patch

Reviewers: mgallien, ngraham

Reviewed By: ngraham

Tags: #elisa

Differential Revision: https://phabricator.kde.org/D23240